--- a/Quantumm.Image/Quantumm.Image.csproj
+++ b/Quantumm.Image/Quantumm.Image.csproj
@@ -2,8 +2,18 @@
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<PackageId>Quantumm.Image</PackageId>
+		<Version>1.1</Version>
+		<Authors>shaihnurov</Authors>
+		<Company>shaihnurov</Company>
+		<Description>An asynchronous, LRU-aware image caching and loading service for Avalonia applications.</Description>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Avalonia" Version="11.3.6" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.9" />
+  </ItemGroup>
 
 </Project>
