--- a/Quantumm.Image/Quantumm.Image.csproj
+++ b/Quantumm.Image/Quantumm.Image.csproj
@@ -9,7 +9,7 @@
 		<Authors>shaihnurov</Authors>
 		<Company>shaihnurov</Company>
 		<Description>An asynchronous, LRU-aware image caching and loading service for Avalonia applications.</Description>
-		<PackageReadmeFile>README.md</PackageReadmeFile>
+		<PackageReadmeFile>../README.md</PackageReadmeFile>
   </PropertyGroup>
 
   <ItemGroup>
@@ -17,9 +17,10 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.9" />
   </ItemGroup>
 
-
 	<ItemGroup>
-		<None Include="README.md" Pack="true" PackagePath="\"/>
+		<None Include="../README.md">
+			<Pack>True</Pack>
+			<PackagePath>\</PackagePath>
+		</None>
 	</ItemGroup>
-
 </Project>
