--- a/Quantumm.Image/Quantumm.Image.csproj
+++ b/Quantumm.Image/Quantumm.Image.csproj
@@ -9,8 +9,8 @@
 		<Authors>shaihnurov</Authors>
 		<Company>shaihnurov</Company>
 		<Description>An asynchronous, LRU-aware image caching and loading service for Avalonia applications.</Description>
-		<PackageReadmeFile>README.md</PackageReadmeFile>
-	</PropertyGroup>
+		<PackageReadmeFile>../README.md</PackageReadmeFile>
+  </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Avalonia" Version="11.3.6" />
@@ -18,6 +18,9 @@
   </ItemGroup>
 
 	<ItemGroup>
-		<None Include="README.md" Pack="true" PackagePath="\"/>
+		<None Include="../README.md">
+			<Pack>True</Pack>
+			<PackagePath>\</PackagePath>
+		</None>
 	</ItemGroup>
 </Project>
