--- a/Quantumm.Image/Quantumm.Image.csproj
+++ b/Quantumm.Image/Quantumm.Image.csproj
@@ -12,7 +12,8 @@
 		<PackageProjectUrl>https://github.com/shaihnurov/Quantumm.Image</PackageProjectUrl>
 		<RepositoryUrl>https://github.com/shaihnurov/Quantumm.Image</RepositoryUrl>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
-		<PackageIcon>Assets/logo.png</PackageIcon>
+		<PackageIcon>logo.png</PackageIcon>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -21,6 +22,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<None Include="Assets/logo.png" Pack="true" PackagePath="" />
+		<None Include="..\README.md" Pack="true" PackagePath="\"/>
+		<None Include="..\logo.png" Pack="true" PackagePath="\"/>
 	</ItemGroup>
 </Project>
